Added IOReportImplDefinition to plugin.xml, refs #310
Change-Id: I91d3902926a192d699e6adc129b67761ed0ab0a9
Signed-off-by: Andreas Burchert <andreas.burchert@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.core/plugin.xml
@@ -73,6 +73,14 @@
             class="eu.esdihumboldt.hale.common.core.report.impl.ReportImplDefintion"
             id="eu.esdihumboldt.hale.common.core.report.default">
       </reportDefinition>
+      <messageDefinition
+            class="eu.esdihumboldt.hale.common.core.io.report.impl.IOMessageImplDefinition"
+            id="eu.esdihumboldt.hale.common.core.io">
+      </messageDefinition>
+      <reportDefinition
+            class="eu.esdihumboldt.hale.common.core.io.report.impl.IOReportImplDefinition"
+            id="eu.esdihumboldt.hale.common.core.io">
+      </reportDefinition>
    </extension>
 
 </plugin>
