changed image for mathematical expression function
Change-Id: I6f211351bb7bb1ae0e371891a822365759031701

--- a/cst/plugins/eu.esdihumboldt.cst.functions.numeric/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.numeric/plugin.xml
@@ -15,7 +15,7 @@
             category="eu.esdihumboldt.cst.functions.numeric"
             description="Define a value using a mathematical expression with support for variables"
             help="help/mathematicalExpression/help.xhtml"
-            icon="icons/number.png"
+            icon="icons/exp.gif"
             identifier="eu.esdihumboldt.cst.functions.numeric.mathexpression"
             name="Mathematical Expression">
          <targetProperties>
