added display help command to main toolbar
Change-Id: I9e80d5d8ecbef401d738c6b2c2b650282785d98a

--- a/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.application/plugin.xml
@@ -331,6 +331,16 @@
                   tooltip="Add a new relation">
             </command>
          </toolbar>
+         <toolbar
+               id="eu.esdihumboldt.hale.ui.application.help"
+               label="Help">
+            <command
+                  commandId="org.eclipse.ui.help.displayHelp"
+                  icon="icons/help.gif"
+                  label="Open help browser"
+                  style="push">
+            </command>
+         </toolbar>
       </menuContribution>
       <menuContribution
             allPopups="false"
