--- a/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
+++ b/cst/plugins/eu.esdihumboldt.cst.functions.core/plugin.xml
@@ -27,6 +27,12 @@
             function="eu.esdihumboldt.hale.align.classification"
             id="eu.esdihumboldt.cst.functions.core.classification">
       </propertyTransformation>
+      <propertyTransformation
+            class="eu.esdihumboldt.cst.functions.core.FormattedString"
+            engine="eu.esdihumboldt.align.java"
+            function="eu.esdihumboldt.hale.align.formattedstring"
+            id="eu.esdihumboldt.cst.functions.core.formattedstring">
+      </propertyTransformation>
    </extension>
 
 </plugin>
