added icon for FormattedString function
refs #270

Change-Id: Ic7dae0c59bf24d69c3d03ad77b23b2f22bc0be00

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -101,6 +101,7 @@
       <propertyFunction
             category="eu.esdihumboldt.hale.align.general"
             description="Creates a formatted string based on a pattern and the input variables"
+            icon="icons/text.png"
             identifier="eu.esdihumboldt.hale.align.formattedstring"
             name="Formatted string">
          <sourceProperties>
