parameter page for formatted string function
refs #270

Change-Id: Ifd2239eead21e126985d2f9ab0ce23d997821968
Reviewed-on: http://gerrit.esdi-community.eu/714
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
@@ -31,5 +31,13 @@
                name="classificationMapping">
          </parameter>
       </propertyParameterPage>
+      <propertyParameterPage
+            class="eu.esdihumboldt.hale.ui.functions.core.FormattedStringParameterPage"
+            function="eu.esdihumboldt.hale.align.formattedstring"
+            id="eu.esdihumboldt.hale.ui.functions.core.formattedstring">
+         <parameter
+               name="pattern">
+         </parameter>
+      </propertyParameterPage>
    </extension>
 </plugin>
