implemented merge parameter page
refs #358

Change-Id: I8ed49ba0287e70412984fcf6460a748403322ca8
Reviewed-on: http://gerrit.esdi-community.eu/735
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
@@ -39,5 +39,13 @@
                name="pattern">
          </parameter>
       </propertyParameterPage>
+      <typeParameterPage
+            class="eu.esdihumboldt.hale.ui.functions.core.MergeParameterPage"
+            function="eu.esdihumboldt.hale.align.merge"
+            id="eu.esdihumboldt.hale.ui.functions.core.merge">
+         <parameter
+               name="property">
+         </parameter>
+      </typeParameterPage>
    </extension>
 </plugin>
