fixed wrong references to InstanceReference in extensions
Change-Id: I85577096cde69223396a58e107838cedf14598d2
Reviewed-on: http://gerrit.esdi-community.eu/808
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ext/styledmap/eu.esdihumboldt.hale.ui.views.styledmap/plugin.xml
+++ b/ext/styledmap/eu.esdihumboldt.hale.ui.views.styledmap/plugin.xml
@@ -336,7 +336,7 @@
                      operator="or">
                   <or>
                      <instanceof
-                           value="eu.esdihumboldt.hale.ui.service.instance.InstanceReference">
+                           value="eu.esdihumboldt.hale.common.instance.model.InstanceReference">
                      </instanceof>
                      <instanceof
                            value="eu.esdihumboldt.hale.common.instance.model.Instance">
