--- a/ui/plugins/eu.esdihumboldt.hale.ui.style/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.style/plugin.xml
@@ -49,7 +49,7 @@
                            value="eu.esdihumboldt.hale.common.align.model.impl.TypeEntityDefinition">
                      </instanceof>
                      <instanceof
-                           value="eu.esdihumboldt.hale.ui.service.instance.InstanceReference">
+                           value="eu.esdihumboldt.hale.common.instance.model.InstanceReference">
                      </instanceof>
                      <instanceof
                            value="eu.esdihumboldt.hale.common.instance.model.Instance">
