additional property selection for merge function
refs #371

Change-Id: Ic3657c8d2ad917642033119fd8c205c4c4fca771
Reviewed-on: http://gerrit.esdi-community.eu/831
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -153,10 +153,17 @@
          </targetTypes>
          <functionParameter
                description="Each property is defined by a property path"
-               label="Merge property"
+               label="Merge property (key)"
                maxOccurrence="n"
                minOccurrence="1"
                name="property">
+         </functionParameter>
+         <functionParameter
+               description="Each property is defined by a property path"
+               label="Merge property (no key)"
+               maxOccurrence="n"
+               minOccurrence="1"
+               name="additional_property">
          </functionParameter>
       </typeFunction>
    </extension>
