implemented order property for parameter pages
for now only used for merge parameter pages

refs #348
refs #371

Change-Id: I67fca696b2219d314586b26e4137f1295b0c3ba6

--- a/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
@@ -42,7 +42,8 @@
       <typeParameterPage
             class="eu.esdihumboldt.hale.ui.functions.core.MergeParameterPage"
             function="eu.esdihumboldt.hale.align.merge"
-            id="eu.esdihumboldt.hale.ui.functions.core.merge">
+            id="eu.esdihumboldt.hale.ui.functions.core.merge"
+            order="0">
          <parameter
                name="property">
          </parameter>
@@ -50,7 +51,8 @@
       <typeParameterPage
             class="eu.esdihumboldt.hale.ui.functions.core.MergeParameterPage"
             function="eu.esdihumboldt.hale.align.merge"
-            id="eu.esdihumboldt.hale.ui.functions.core.merge2">
+            id="eu.esdihumboldt.hale.ui.functions.core.merge2"
+            order="1">
          <parameter
                name="additional_property">
          </parameter>
