added property section for cell explanation
Also updated PropertiesLabelProvider to be able to deal
with cells.

refs #374

Change-Id: I3f9a7f9d129ecddb3f4fc5b43234208a7961d8ae
Reviewed-on: http://gerrit.esdi-community.eu/845
Tested-by: Jenkins <sitemple@igd.fraunhofer.de>
Reviewed-by: Simon Templer <simon.templer@igd.fraunhofer.de>

--- a/ui/plugins/eu.esdihumboldt.hale.ui.views.properties/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.views.properties/plugin.xml
@@ -310,6 +310,16 @@
                   type="eu.esdihumboldt.hale.common.schema.model.TypeDefinition">
             </input>
          </propertySection>
+         <propertySection
+               class="eu.esdihumboldt.hale.ui.views.properties.cell.explanation.HtmlExplanationCellSection"
+               enablesFor="1"
+               filter="eu.esdihumboldt.hale.ui.views.properties.cell.explanation.HtmlExplanationCellFilter"
+               id="eu.esdihumboldt.hale.ui.views.properties.cell.explanation"
+               tab="eu.esdihumboldt.hale.ui.views.properties.explanation">
+            <input
+                  type="eu.esdihumboldt.hale.common.align.model.Cell">
+            </input>
+         </propertySection>
       </propertySections>
    </extension>
    <extension
@@ -357,6 +367,11 @@
                category="eu.esdihumboldt.hale.ui.views.properties.definition"
                id="eu.esdihumboldt.hale.ui.views.properties.definition.structure"
                label="Structure">
+         </propertyTab>
+         <propertyTab
+               category="eu.esdihumboldt.hale.ui.views.properties.definition"
+               id="eu.esdihumboldt.hale.ui.views.properties.explanation"
+               label="Explanation">
          </propertyTab>
       </propertyTabs>
    </extension>
