--- a/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.align/plugin.xml
@@ -162,8 +162,26 @@
                description="Each property is defined by a property path"
                label="Merge property (no key)"
                maxOccurrence="n"
-               minOccurrence="1"
+               minOccurrence="0"
                name="additional_property">
+         </functionParameter>
+         <functionParameter
+               description="Auto detection of additional equal properties which will get merged."
+               label="Auto detect"
+               maxOccurrence="1"
+               minOccurrence="1"
+               name="auto_detect">
+            <validator
+                  class="eu.esdihumboldt.hale.common.align.extension.function.validator.EnumerationValidator">
+               <parameter
+                     name="value"
+                     value="true">
+               </parameter>
+               <parameter
+                     name="value"
+                     value="false">
+               </parameter>
+            </validator>
          </functionParameter>
       </typeFunction>
    </extension>
