--- a/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
+++ b/ui/plugins/eu.esdihumboldt.hale.ui.functions.core/plugin.xml
@@ -42,17 +42,26 @@
       <typeParameterPage
             class="eu.esdihumboldt.hale.ui.functions.core.MergeParameterPage"
             function="eu.esdihumboldt.hale.align.merge"
-            id="eu.esdihumboldt.hale.ui.functions.core.merge"
+            id="eu.esdihumboldt.hale.ui.functions.core.merge1"
             order="0">
          <parameter
                name="property">
          </parameter>
       </typeParameterPage>
       <typeParameterPage
-            class="eu.esdihumboldt.hale.ui.functions.core.MergeParameterPage"
+            class="eu.esdihumboldt.hale.ui.function.generic.pages.GenericParameterPage"
             function="eu.esdihumboldt.hale.align.merge"
             id="eu.esdihumboldt.hale.ui.functions.core.merge2"
             order="1">
+         <parameter
+               name="auto_detect">
+         </parameter>
+      </typeParameterPage>
+      <typeParameterPage
+            class="eu.esdihumboldt.hale.ui.functions.core.MergeParameterPage"
+            function="eu.esdihumboldt.hale.align.merge"
+            id="eu.esdihumboldt.hale.ui.functions.core.merge3"
+            order="2">
          <parameter
                name="additional_property">
          </parameter>
