added filter definition extension point
refs #312
refs #382

Change-Id: If2b3d20defdb03dd0065f789969a0236d3db966f

--- a/common/plugins/eu.esdihumboldt.hale.common.instance/plugin.xml
+++ b/common/plugins/eu.esdihumboldt.hale.common.instance/plugin.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <?eclipse version="3.4"?>
 <plugin>
+   <extension-point id="eu.esdihumboldt.hale.instance.filter" name="Filter definitions" schema="schema/eu.esdihumboldt.hale.instance.filter.exsd"/>
    <extension
          point="eu.esdihumboldt.hale.io.action">
       <action
