--- a/common/plugins/eu.esdihumboldt.hale.common.filter/.settings/org.eclipse.pde.core.prefs
+++ b/common/plugins/eu.esdihumboldt.hale.common.filter/.settings/org.eclipse.pde.core.prefs
@@ -1,4 +1,3 @@
-#Thu Jun 09 16:06:05 CEST 2011
+#Tue Feb 28 11:44:55 CET 2012
 eclipse.preferences.version=1
-pluginProject.extensions=false
 resolve.requirebundle=false
